--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Fabio Filli
+email: hejhej@fabiofilli.com
+description: > # its just the personal website and blog of fabio filli.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://fabiofilli.com" # the base hostname & protocol for your site
+twitter_username: fabiofilli
+github_username:  fabiofilli
 
 # Build settings
 markdown: kramdown
