use redcarpet instead of kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ twitter_username: fabiofilli
 github_username:  fabiofilli
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+
 
 permalink: /:title/
 
